# voxcpm-tts

./: .env  .gitignore  CLAUDE.md  README.md  config.py  download.py  main.py  pyproject.toml  spec.md  voice.py
static/: app.js  index.html  styles.css
